@@ -1,3 +1,9 @@
+2014-01-20  Tom Tromey  <tromey@redhat.com>
+
+	[BZ #16169]
+	* sysdeps/unix/sysv/linux/aarch64/clone.S (__clone): Add CFI
+	directives;  Zero x29.
+
 2014-01-07  Marcus Shawcroft  <marcus.shawcroft@linaro.org>
 
 	[BZ #16387]
